# llm-hallucination-detector

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: models.yaml
experiments/claim_extraction/prompts/: extract_claims.txt
src/: test_claim_extraction.py
src/claim_extraction/: extractor.py
src/llm_hallucination_detector/: __init__.py  app.py  logging_config.py  pipeline.py  routing.py  schemas.py  scoring.py  settings.py
src/llm_hallucination_detector/services/: claim_extractor.py  embedding_model.py  retriever.py  verifier.py
src/llm_hallucination_detector/sources/: base.py  gdelt.py  wikipedia.py
src/llm_hallucination_detector/storage/: cache.py  vector_index.py
src/llm_hallucination_detector/utils/: device.py  text.py
src/retreival/: bm25.py  embeddings.py  news_loader.py  retreiver.py  wiki_loader.py
tests/: test_text_utils.py
